fix: add full example download link

--- a/docs/developer-docs/5.40.x/admin-area/extending/change-logo.mdx
+++ b/docs/developer-docs/5.40.x/admin-area/extending/change-logo.mdx
@@ -29,6 +29,7 @@ In this article, we cover how to replace the default Webiny logo that is shown i
   name={"adminLogo"}
   dependencies={"@webiny/app-serverless-cms"}
   fullExampleLink={"https://github.com/webiny/webiny-examples/tree/master/admin-logo"}
+  fullExampleDownloadLink={"admin-logo"}
 />
 
 ## Replace the Logo
