feat: create 5.40.5 release notes

--- a/docs/release-notes/5.40.5/changelog.mdx
+++ b/docs/release-notes/5.40.5/changelog.mdx
@@ -8,6 +8,16 @@ import webinyAboutFixed from "./assets/webiny-about-fixed.png";
 
 <GithubRelease version={"5.40.5"} />
 
+## Security - Folder Level Permissions
+
+### Ensuring Folders Cannot Be Deleted If They Contain Content (Including Inaccessible Content) ([#4191](https://github.com/webiny/webiny-js/pull/4191))
+
+We've done two improvements related to checking if a folder can be deleted.
+
+Most importantly, upon deleting a folder, we now take into consideration the possibility that a folder might contain folders or content (e.g. files or CMS entries) to which the user does not have access. Because this was previously not the case, deletion of a folder would succeed in case it contained folders or content to which the user does not have access.
+
+Also, previously, the deletion of a CMS entries folder would not succeed if a folder had CMS entries (which is the correct behaviour), but, at the same time, it would also incorrectly succeed if a folder had child folders. Deletion of a folder should be prevented in case a folder contains at least one content entry or one folder.
+
 ## Deployments
 
 ### Updated Pulumi Package Versions ([#4216](https://github.com/webiny/webiny-js/pull/4216))
