feat: create 5.39.12 release notes

--- a/docs/release-notes/5.39.11/changelog.mdx
+++ b/docs/release-notes/5.39.11/changelog.mdx
@@ -8,7 +8,7 @@ import { GithubRelease } from "@/components/GithubRelease";
 
 <GithubRelease version={"5.39.11"} />
 
-## CMS
+## Headless CMS
 
 ### Custom Model Field Renderers in File Manager ([#4231](https://github.com/webiny/webiny-js/pull/4231))
 
