feat: create 5.39.12 release notes

--- a/docs/release-notes/5.39.12/changelog.mdx
+++ b/docs/release-notes/5.39.12/changelog.mdx
@@ -1,5 +1,5 @@
 ---
-id: ca039c85
+id: 71d7023a
 title: Webiny 5.39.12 Changelog
 description: See what's new in Webiny version 5.39.12.
 ---
@@ -12,13 +12,13 @@ import contentEntriesSection from "./assets/content-entries-section.png";
 
 ## Headless CMS
 
-### Content Entries - Improved "Content Entry Revisions" Section ([#4255](https://github.com/webiny/webiny-js/pull/4255)) ([#4260](https://github.com/webiny/webiny-js/pull/4260)) 
+### Various UI Improvements ([#4255](https://github.com/webiny/webiny-js/pull/4255)) ([#4260](https://github.com/webiny/webiny-js/pull/4260)) 
 
-We've made a couple of improvements in the Headless CMS UI.
+A couple of improvements were made to the Headless CMS UI.
 
 #### Updating Lists Automatically
 
-For starters, in the content entry's Revisions tab, once a revision is deleted, the list of revisions will be automatically refreshed. Previously, users had to manually refresh the page to see the updated list of revisions.
+For starters, in the content entry's Revisions tab, once a revision is deleted, the list of revisions will be automatically refreshed. Previously, users had to manually refresh the page to see the updated list of revisions, leading to a less than ideal user experience.
 
 <Image src={revisionsSection} alt={"Content Entry Revisions Section"} />
 
