feat: create 5.40.6 release notes

--- a/docs/release-notes/5.40.6/changelog.mdx
+++ b/docs/release-notes/5.40.6/changelog.mdx
@@ -6,6 +6,8 @@ description: See what's new in Webiny version 5.40.6.
 
 import revisionsSection from "./assets/revisions-section.png";
 import contentEntriesSection from "./assets/content-entries-section.png";
+import gqlTooltipsIssue from "./assets/gql-tooltips-issue.png";
+
 
 <GithubRelease version={"5.40.6"} />
 
@@ -13,18 +15,41 @@ import contentEntriesSection from "./assets/content-entries-section.png";
 
 ### Fixed API Playground (GraphQL Playground) Tooltip Hiding Issue ([#4272](https://github.com/webiny/webiny-js/pull/4272))
 
-asd
+Over the past month or so, we've received multiple reports of users experiencing issues with the API Playground (GraphQL Playground) tooltip. Specifically, once shown, the tooltip would not hide, making it much harder to interact with the API Playground.
+
+<Image src={gqlTooltipsIssue} alt={"GraphQL Playground Tooltips Issue"} />
+
+With this release, we've resolved this issue. Now, the tooltip will hide as expected, making it easier to interact with the API Playground. 
+
+Note that the GraphQL Playground that's being used in the Admin app is a third-party library that is no longer actively maintained. Because of this, we're currently looking into possible alternatives that we could use in the future.
 
 ## Ported 5.39.x Changes
 
 With this release, we’ve ported the following changes from the recent 5.39.x releases. This was done to ensure that all the 5.39.x improvements are also available to projects that are using the 5.40.x version of Webiny.
 
-### Ported 5.39.13 Changes
+### 5.39.13
 
+<Alert type={"info"}>
 
-### Ported 5.39.12 Changes
+  The 5.39.13 release notes can be found [here](/docs/release-notes/5.39.13/changelog).
 
-With this release, we’ve ported the following changes from the 5.39.12 release. This was done to ensure that all the 5.39.12 improvements are also available to projects that are using the 5.40.x version of Webiny.
+</Alert>
+
+#### Headless CMS
+
+#### Ensure Published Entries Are Fully Deleted ([#4265](https://github.com/webiny/webiny-js/pull/4265))
+
+With this release, we've resolved an issue where deleting a published revision of a content entry would not make the entry disappear when listing content entries via [Headless CMS's READ GraphQL API](/docs/headless-cms/basics/graphql-api#read). In other words, the entry would still remain visible in the list of entries, even though it was deleted.
+
+Now, when a published entry is deleted, it will no longer be visible in the list of entries returned by the READ API.
+
+### 5.39.12
+
+<Alert type={"info"}>
+
+  The 5.39.12 release notes can be found [here](/docs/release-notes/5.39.12/changelog).
+
+</Alert>
 
 #### Headless CMS
 
