feat: create 5.39.15 release notes

--- a/docs/release-notes/5.39.15/changelog.mdx
+++ b/docs/release-notes/5.39.15/changelog.mdx
@@ -11,10 +11,10 @@ import deletionIssue from "./assets/deletion-issue.png";
 
 ## Headless CMS
 
-### Fixed an issue with republishing older revisions 
+### Addressing an Issue Related to Publishing of Non-Latest Entry Revision ([#4279](https://github.com/webiny/webiny-js/pull/4279))
 
 We've addressed an issue which would happen upon user trying to republish an older revision of a content entry. Instead of republishing the selected revision, the users would just be presented with the "Provided list of item keys contains duplicates" error message.
 
-<Image src={deletionIssue} alt={"Deletion issue"} />
+<Image src={deletionIssue} alt={"Deletion Issue"} />
 
 This issue has now been fixed and you can now republish older revisions without any issues.
