chore: missing intro blocks

--- a/docs/developer-docs/5.40.x/headless-cms/extending/conditional-rendering.mdx
+++ b/docs/developer-docs/5.40.x/headless-cms/extending/conditional-rendering.mdx
@@ -4,9 +4,22 @@ title: Conditional Rendering
 description: Learn how to programmatically control fields, validators, and field renderers.
 ---
 
+import { CanIUseThis } from "@/components/CanIUseThis";
+import {WhatYouWillLearn} from "@/components/WhatYouWillLearn";
 import conditionalValidation from "./assets/conditional-validation.gif";
 import conditionalFields from "./assets/conditional-fields.gif";
 import conditionalRenderer from "./assets/conditional-renderer.gif";
+
+<CanIUseThis since={"5.40.x"} />
+
+<WhatYouWillLearn>
+
+  - how to customize every field in the content entry form
+  - how to customize validation logic
+  - how to customize field visibility
+  - how to customize field renderers
+
+</WhatYouWillLearn>
 
 ## Overview
 
@@ -120,7 +133,7 @@ export const Extension = () => {
 
 `FieldElement` decorators support a `modelIds` prop, which allows us to limit which models are affected by this customization.
 
-## Conditional Fields
+## Conditional Field Visibility
 
 In this example, we want to show or hide a field depending on some other field value. We've defined a model with three fields, where the value of the `videoType` field affects the visibility of the other two fields, `videoUrl`, and `videoUpload`.
 
