feat: create 5.40.6 release notes

--- a/docs/release-notes/5.40.6/changelog.mdx
+++ b/docs/release-notes/5.40.6/changelog.mdx
@@ -23,87 +23,18 @@ With this release, we've resolved this issue. Now, the tooltip will hide as expe
 
 Note that the GraphQL Playground that's being used in the Admin app is a third-party library that is no longer actively maintained. Because of this, we're currently looking into possible alternatives that we could use in the future.
 
-## Ported 5.39.x Changes
+## Ported Changes From Recent 5.39 Patch Releases
 
-With this release, we’ve ported the following changes from the recent 5.39.x releases. This was done to ensure that all the 5.39.x improvements are also available to projects that are using the 5.40.x version of Webiny.
+With this release, we’ve ported multiple changes from a set of 5.39 patch releases we've pushed recently. This was done to ensure that all the 5.39.x improvements are also available to projects that are using the 5.40.x version of Webiny.
 
-### 5.39.13
+The following 5.39 patch releases were ported to 5.40.6:
 
-<Alert type={"info"}>
+1. [5.39.12](/docs/release-notes/5.39.12/changelog)
+2. [5.39.13](/docs/release-notes/5.39.13/changelog)
+3. [5.39.14](/docs/release-notes/5.39.14/changelog)
+4. [5.39.15](/docs/release-notes/5.39.15/changelog)
 
-  The 5.39.13 release notes can be found [here](/docs/release-notes/5.39.13/changelog).
+Make sure to check out the linked changelogs to see what's new in these releases. 
 
-</Alert>
 
-#### Headless CMS
 
-#### Ensure Published Entries Are Fully Deleted ([#4265](https://github.com/webiny/webiny-js/pull/4265))
-
-With this release, we've resolved an issue where deleting a published revision of a content entry would not make the entry disappear when listing content entries via [Headless CMS's READ GraphQL API](/docs/headless-cms/basics/graphql-api#read). In other words, the entry would still remain visible in the list of entries, even though it was deleted.
-
-Now, when a published entry is deleted, it will no longer be visible in the list of entries returned by the READ API.
-
-### 5.39.12
-
-<Alert type={"info"}>
-
-  The 5.39.12 release notes can be found [here](/docs/release-notes/5.39.12/changelog).
-
-</Alert>
-
-#### Headless CMS
-
-##### Various UI Improvements ([#4255](https://github.com/webiny/webiny-js/pull/4255)) ([#4260](https://github.com/webiny/webiny-js/pull/4260))
-
-A couple of improvements were made to the Headless CMS UI.
-
-###### Updating Lists Automatically
-
-For starters, in the content entry's Revisions tab, once a revision is deleted, the list of revisions will be automatically refreshed. Previously, users had to manually refresh the page to see the updated list of revisions, leading to a less than ideal user experience.
-
-<Image src={revisionsSection} alt={"Content Entry Revisions Section"} />
-
-The same improvement was made in the list of content entries. Previously, when a revision was deleted, the list of content entries was not automatically refreshed. Now, it is.
-
-<Image src={contentEntriesSection} alt={"Content Entries Section"} />
-
-###### Proper Redirecting After Deleting a Revision
-
-Next, when a user deletes a content entry revision, they will automatically be redirected to the previous revision. Previously, users were not redirected anywhere, and they had to manually navigate back to a different revision.
-
-Also, if the deleted revision was the last one, now, the user will be redirected back to the list of content entries.
-
-###### Added Success Message
-
-Finally, once a user deletes a content entry revision, a success message (snackbar) will be displayed at the bottom of the screen. This message will inform the user that the revision was successfully deleted and that they are being redirected to the previous content entry revision (or back to list of all content entries if the deleted revision was the last one).
-
-##### `createFrom` GraphQL Mutation - Previously Published Revision Is Now Correctly Marked as Unpublished ([#4258](https://github.com/webiny/webiny-js/pull/4258))
-
-Upon programmatically creating a new content entry revision using the `createFrom` GraphQL mutation, users have the ability to also immediately mark the revision as published. For example:
-
-```graphql
-mutation {
-  createVideoFrom(
-    revision: "5f9e3e3e3e3e3e3e3e3e3e3e#0001"
-    data: {
-      status: "published"
-      title: "Test"
-      description: "Test description."
-    }
-  ) {
-    data {
-      id
-      title
-      description
-    }
-  }
-}
-```
-
-And while this functionality did work, still, if a content entry already had an existing published revision, upon running the above mutation, the published revision's status would remain unchanged, when in fact it should've been changed to unpublished.
-
-With this release, we've addressed this issue. Now, when creating a new revision using the `createFrom` mutation, if the `status` field is set to `published`, the previously published revision will be automatically marked as unpublished.
-
-##### Ensure Field Values Are Preserved When Deleting Latest Revision ([#4253](https://github.com/webiny/webiny-js/pull/4253))
-
-When deleting the latest revision of a content entry, the field values of the previous revision were not being preserved. This was a bug, and with this release, we've fixed it. Now, when deleting the latest revision of a content entry, the field values of the previous revision will be preserved.
