feat: create 5.40.6 release notes

--- a/docs/release-notes/5.40.6/changelog.mdx
+++ b/docs/release-notes/5.40.6/changelog.mdx
@@ -25,7 +25,8 @@ Note that the GraphQL Playground that's being used in the Admin app is a third-p
 
 ## Ported Changes From Recent 5.39 Patch Releases
 
-With this release, we’ve ported multiple changes from a set of 5.39 patch releases we've pushed recently. This was done to ensure that all the 5.39.x improvements are also available to projects that are using the 5.40.x version of Webiny.
+With this release, we’ve ported multiple fixes and improvements that where released via four 5.39 patch releases, over the
+last couple of weeks. This way, all the fixes and improvements that were made are now also available in the latest version of Webiny.
 
 The following 5.39 patch releases were ported to 5.40.6:
 
@@ -34,7 +35,7 @@ The following 5.39 patch releases were ported to 5.40.6:
 3. [5.39.14](/docs/release-notes/5.39.14/changelog)
 4. [5.39.15](/docs/release-notes/5.39.15/changelog)
 
-Make sure to check out the linked changelogs to see what's new in these releases. 
+Make sure to check out the linked changelogs to see what changed in each of these patch releases. 
 
 
 
