docs: add 5.40.6 docs

--- a/docs/release-notes/5.40.6/changelog.mdx
+++ b/docs/release-notes/5.40.6/changelog.mdx
@@ -7,6 +7,7 @@ description: See what's new in Webiny version 5.40.6.
 import revisionsSection from "./assets/revisions-section.png";
 import contentEntriesSection from "./assets/content-entries-section.png";
 import gqlTooltipsIssue from "./assets/gql-tooltips-issue.png";
+import fmTags from "./assets/fm-tags.png";
 
 
 <GithubRelease version={"5.40.6"} />
@@ -23,6 +24,24 @@ With this release, we've resolved this issue. Now, the tooltip will hide as expe
 
 Note that the GraphQL Playground that's being used in the Admin app is a third-party library that is no longer actively maintained. Because of this, we're currently looking into possible alternatives that we could use in the future.
 
+## File Manager
+
+### Responsive Stacking of Tag Matching Select ([#4241](https://github.com/webiny/webiny-js/pull/4241))
+In this release, we've improved the responsiveness of the tag filter section within the file manager. When the container width is limited, the select input for choosing tags matching now stacks vertically alongside the section title. This adjustment enhances the user experience on smaller screens by ensuring a more accessible and intuitive layout.
+
+<Image src={fmTags} alt={"File Manager Tags Matching Select Issue"} />
+
+## Page Builder
+
+### Fix Redirect for "Edit" Action in Page Builder ([#4271](https://github.com/webiny/webiny-js/pull/4271))
+In this release, we've resolved an issue where users encountered errors when clicking the "Edit" action in the page builder list. The fix ensures that the correct ID, including the revision number, is passed via the query string to the page editor, preventing navigation errors.
+
+## Headless CMS
+
+### Deleting Entry Revision Incorrectly Moves Entire Entry to Trash ([#4275](https://github.com/webiny/webiny-js/pull/4275))
+
+We have resolved a bug that occurred when deleting a specific entry revision from the revision list. Previously, deleting a single revision inadvertently moved the entire entry to the trash bin rather than only removing the selected revision.
+
 ## Ported Changes From Recent 5.39 Patch Releases
 
 With this release, we’ve ported multiple fixes and improvements that where released via four 5.39 patch releases, over the
@@ -35,7 +54,4 @@ The following 5.39 patch releases were ported to 5.40.6:
 3. [5.39.14](/docs/release-notes/5.39.14/changelog)
 4. [5.39.15](/docs/release-notes/5.39.15/changelog)
 
-Make sure to check out the linked changelogs to see what changed in each of these patch releases. 
-
-
-
+Make sure to check out the linked changelogs to see what changed in each of these patch releases.
