--- a/docs/release-notes/5.40.6/changelog.mdx
+++ b/docs/release-notes/5.40.6/changelog.mdx
@@ -36,6 +36,9 @@ In this release, we've improved the responsiveness of the tag filter section wit
 ### Fix Redirect for "Edit" Action in Page Builder ([#4271](https://github.com/webiny/webiny-js/pull/4271))
 In this release, we've resolved an issue where users encountered errors when clicking the "Edit" action in the page builder list. The fix ensures that the correct ID, including the revision number, is passed via the query string to the page editor, preventing navigation errors.
 
+### Fix Page Builder Template Selector UI ([#4284](https://github.com/webiny/webiny-js/pull/4284))
+In this release we resolves the misalignment issue, ensuring that the content in the left-hand side list of the template selector displays correctly. The issue likely originated from the introduction of the adjustable column feature ([#4179](https://github.com/webiny/webiny-js/pull/4179)).
+
 ## Headless CMS
 
 ### Deleting Entry Revision Incorrectly Moves Entire Entry to Trash ([#4275](https://github.com/webiny/webiny-js/pull/4275))
