fix: mention `indexPrefix` option instead of `ELASTIC_SEARCH_INDEX_PREFIX` env var (deprecated)

--- a/docs/developer-docs/5.40.x/core-development-concepts/extending-and-customizing/how-to-customize-elasticsearch-index.mdx
+++ b/docs/developer-docs/5.40.x/core-development-concepts/extending-and-customizing/how-to-customize-elasticsearch-index.mdx
@@ -102,7 +102,7 @@ Index name can contain dashes (-), underscores (\_), numbers (0-9) and english l
 
 You can set the `ELASTICSEARCH_SHARED_INDEXES` environment variable to `true` to create a single index for all tenants for each application (or for each model in case of the Headless CMS), but we do not encourage it.
 
-Also, the `webiny.application.ts` configuration file, and, more specifically, via the `indexPrefix` property in the `elasticSearch` configuration section, it's also possible to prefix all index names with a custom prefix. To learn more, check out the [Using a Shared Amazon OpenSearch Service Domain](/docs/{version}/infrastructure/basics/modify-cloud-infrastructure#using-a-shared-amazon-open-search-service-domain) section.
+Also, via the `webiny.application.ts` configuration file, and, more specifically, via the `indexPrefix` property in the `elasticSearch` configuration section, it's also possible to prefix all index names with a custom prefix. To learn more, check out the [Using a Shared Amazon OpenSearch Service Domain](/docs/{version}/infrastructure/basics/modify-cloud-infrastructure#using-a-shared-amazon-open-search-service-domain) section.
 
 Use case for this would be for when you have multiple environments on a single Elasticsearch instance. You can prefix each environment indexes with, for example, `dev_`, `prod_`, `staging_`, `test_`, etc...
 
