feat: create 5.40.6 release notes

--- a/docs/release-notes/5.40.6/changelog.mdx
+++ b/docs/release-notes/5.40.6/changelog.mdx
@@ -4,25 +4,21 @@ title: Webiny 5.40.6 Changelog
 description: See what's new in Webiny version 5.40.6.
 ---
 
-import revisionsSection from "./assets/revisions-section.png";
-import contentEntriesSection from "./assets/content-entries-section.png";
 import gqlTooltipsIssue from "./assets/gql-tooltips-issue.png";
 import fmTags from "./assets/fm-tags.png";
 
 
 <GithubRelease version={"5.40.6"} />
 
-## Admin App
 
-### Fixed API Playground (GraphQL Playground) Tooltip Hiding Issue ([#4272](https://github.com/webiny/webiny-js/pull/4272))
+## Headless CMS
 
-Over the past month or so, we've received multiple reports of users experiencing issues with the API Playground (GraphQL Playground) tooltip. Specifically, once shown, the tooltip would not hide, making it much harder to interact with the API Playground.
+### Singleton Models
 
-<Image src={gqlTooltipsIssue} alt={"GraphQL Playground Tooltips Issue"} />
 
-With this release, we've resolved this issue. Now, the tooltip will hide as expected, making it easier to interact with the API Playground. 
+### Deleting Entry Revision Incorrectly Moves Entire Entry to Trash ([#4275](https://github.com/webiny/webiny-js/pull/4275))
 
-Note that the GraphQL Playground that's being used in the Admin app is a third-party library that is no longer actively maintained. Because of this, we're currently looking into possible alternatives that we could use in the future.
+We have resolved a bug that occurred when deleting a specific entry revision from the revision list. Previously, deleting a single revision inadvertently moved the entire entry to the trash bin rather than only removing the selected revision.
 
 ## File Manager
 
@@ -39,13 +35,27 @@ In this release, we've resolved an issue where users encountered errors when cli
 ### Fix Page Builder Template Selector UI ([#4284](https://github.com/webiny/webiny-js/pull/4284))
 In this release, we resolved the misalignment issue to ensure that the content in the left-hand side list of the template selector displays correctly. The issue likely originated from the introduction of the adjustable column feature ([#4179](https://github.com/webiny/webiny-js/pull/4179)).
 
-## Headless CMS
+## Admin App
 
-### Deleting Entry Revision Incorrectly Moves Entire Entry to Trash ([#4275](https://github.com/webiny/webiny-js/pull/4275))
+### Fixed API Playground (GraphQL Playground) Tooltip Hiding Issue ([#4272](https://github.com/webiny/webiny-js/pull/4272))
 
-We have resolved a bug that occurred when deleting a specific entry revision from the revision list. Previously, deleting a single revision inadvertently moved the entire entry to the trash bin rather than only removing the selected revision.
+Over the past month or so, we've received multiple reports of users experiencing issues with the API Playground (GraphQL Playground) tooltip. Specifically, once shown, the tooltip would not hide, making it much harder to interact with the API Playground.
 
-## Ported Changes From Recent 5.39 Patch Releases
+<Image src={gqlTooltipsIssue} alt={"GraphQL Playground Tooltips Issue"} />
+
+With this release, we've resolved this issue. Now, the tooltip will hide as expected, making it easier to interact with the API Playground.
+
+Note that the GraphQL Playground that's being used in the Admin app is a third-party library that is no longer actively maintained. Because of this, we're currently looking into possible alternatives that we could use in the future.
+
+## Other Improvements
+
+### Forms - Cmd+Enter Keyboard Shortcut Submits Form with Latest Input Field Value ([#4295](https://github.com/webiny/webiny-js/pull/4295)
+
+If a user used `CMD + Enter` keyboard shortcut to submit the form, and if the shortcut was pressed "too quickly" after typing something into an input field, the form would be submitted with the previous value that was typed into the input field.
+
+From now on, the form will now be submitted with the latest value of the input field, regardless of how quickly the Cmd+Enter keyboard shortcut is pressed after typing something into the input field.
+
+### Ported Changes From Recent 5.39 Patch Releases
 
 With this release, we’ve ported multiple fixes and improvements that where released via four 5.39 patch releases, over the
 last couple of weeks. This way, all the fixes and improvements that were made are now also available in the latest version of Webiny.
