feat: create 5.40.6 release notes

--- a/docs/release-notes/5.40.6/changelog.mdx
+++ b/docs/release-notes/5.40.6/changelog.mdx
@@ -50,7 +50,7 @@ Note that the GraphQL Playground that's being used in the Admin app is a third-p
 
 ## Other Improvements
 
-### Forms - Cmd+Enter Keyboard Shortcut Submits Form with Latest Input Field Value ([#4295](https://github.com/webiny/webiny-js/pull/4295)
+### `CMD + Enter` Keyboard Shortcut Incorrectly Submits the Form (Without the Latest Input Value) ([#4295](https://github.com/webiny/webiny-js/pull/4295))
 
 If a user used `CMD + Enter` keyboard shortcut to submit the form, and if the shortcut was pressed "too quickly" after typing something into an input field, the form would be submitted with the previous value that was typed into the input field.
 
